# Weaver

./: .gitignore  .mcp.json  CLAUDE.md  HANDOFF.md  PROJECT_OVERVIEW.md  README.md  ROADMAP.md  package.json  pyproject.toml
.weaver/mcp/: minimal_mcp_server.py
docs/specs/: 2026-05-17-weaver-design.md
docs/superpowers/plans/: 2026-05-22-weaver-ctf-lab-agent.md  2026-05-23-windows-powershell-tool-support.md  2026-05-24-prompt-optimization.md
docs/superpowers/specs/: 2026-05-22-weaver-ctf-lab-agent-design.md  2026-05-24-prompt-optimization-design.md
src/: main.ts  repl.ts
src/components/: InputBox.tsx  MessageList.tsx  StatusBar.tsx  StatusPanel.tsx  theme.ts
src/constants/: systemPrompt.ts
src/entrypoints/: cli.ts
src/query/: query.ts  queryInk.ts
src/screens/: REPL.tsx
src/services/mcp/: client.ts  index.ts
src/skills/: loader.ts  parser.ts  types.ts
src/tools/AgentTool/: index.ts
src/tools/BashTool/: index.ts
src/tools/FileEditTool/: index.ts
src/tools/FileReadTool/: index.ts
src/tools/FileWriteTool/: index.ts
src/tools/GlobTool/: index.ts
src/tools/GrepTool/: index.ts
src/tools/SkillTool/: index.ts
src/types/: config.ts  index.ts  tool.ts
src/utils/: config.ts  display.ts  session.ts  shell.ts  weaverMd.ts
src/weaver_py/: cli.py  config.py  phase.py
src/weaver_py/agent/: conversation.py  engine.py  events.py
src/weaver_py/mcp/: __init__.py  client.py  manager.py  types.py
src/weaver_py/progress/: __init__.py  tracker.py
tests/: smoke_python_runtime.py
tests/skills/: parser.test.ts
tests/tools/: bash.test.ts
(+50 files in other folders)
